2014-04-22  Sergio Martin <sergio.martin@artica.es>

	* pandoradb.postgreSQL.sql
	pandoradb.oracle.sql
	pandoradb.data.postgreSQL.sql
	pandoradb.data.oracle.sql
	extras/pandoradb_migrate_5.0.x_to_5.1.mysql.sql
	extras/pandoradb_migrate_5.0.x_to_5.1.oracle.sql
	extras/pandoradb_migrate_5.0.x_to_5.1.postgreSQL.sql
	godmode/agentes/module_manager_editor_plugin.php
	godmode/servers/plugin.php
	godmode/servers/manage_recontask.php
	godmode/servers/manage_recontask_form.php
	godmode/servers/recon_script.php
	pandoradb_data.sql
	include/javascript/pandora_modules.js
	pandoradb.sql: Changed the recon scripts parameters to
	dynamic fields like plugin macros. 
	Fixed some plugin macros bugs in the new hide parameter

2014-04-21 Hirofumi Kosaka <kosaka@rworks.jp>

	* godmode/massive/massive_enable_disable_alerts.php,
	godmode/massive/massive_standby_alerts.php: Long agent/module
	name with multi-byte chars could be shown as 'null' on alert
	list at the massive alert enable/disable/standby operations
	screen (because LEFT() in SQL does not consider multi-byte
	chars, neither SUBSTR() for alternative).

2014-04-19  Junichi Satoh  <junichi@rworks.jp>

	* godmode/agentes/agent_manager.php,
	godmode/agentes/agent_wizard.snmp_explorer.php,
	godmode/agentes/configurar_agente.php,
	godmode/agentes/module_manager_editor.php,
	godmode/agentes/module_manager_editor_common.php: Replaced
	json_encode() with io_json_mb_encode() to avoid invalid encoding
	with multi-byte characters.

2014-04-16  Miguel de Dios <miguel.dedios@artica.es>
	
	* include/javascript/d3.v3.4.5.js: added the last javascript
	D3 library.
	
	* include/javascript/pandora_modules.js,
	include/functions_visual_map.php, include/functions_networkmap.php,
	include/functions_os.php, include/db/mysql.php,
	include/functions_netflow.php, include/constants.php,
	include/functions_reporting.php: standarized the color, now the
	code uses the colors constant.

2014-04-16  Miguel de Dios <miguel.dedios@artica.es>
	